# acrique-v1

./: .gitignore  README.md  docker-compose.yml
.claude/commands/: api-doc.md  ci.md
.github/workflows/: backend-ci.yml
ads/: Dockerfile  README.md  pyproject.toml
ads/assets/creatives/: .gitkeep
ads/campaigns/google/: search_brand.yaml
ads/campaigns/meta/: brand_awareness.yaml
ads/environments/: production.example.yaml  sandbox.example.yaml
ads/src/: __init__.py
ads/src/cli/: google.py  main.py  meta.py
ads/src/models/: __init__.py  campaign.py  config.py
backend/: .env.example  pyproject.toml  requirements.txt  test_admin_api_phase2.py  test_results_phase2.json
backend/alembic/: env.py
backend/alembic/versions/: 0187dde0e7d8_add_product_tables.py  1434a88007e8_create_users_and_verification_tokens_.py  4560cc3f66e5_add_addresses_table.py  9de943b16941_add_orders_and_order_items_tables.py  aa0d4272a011_add_cart_items_table.py  (+7 more)
backend/app/: config.py  main.py
docs/requirements/: 01-プロダクトコンセプト.md  02-page-design.md  03-items.md  11-画面遷移.md  12-データベース設計.md  13-API設計.md  21-data-upload-flow.md  21-広告運用初期構想.md  22-product-master-update.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/public/: acrique.ai  ~ai-304da565-259e-4e1a-a993-1d2247c8284e_.tmp
frontend/src/: middleware.ts
infra/: README.md  cdk.context.json  package-lock.json  package.json
infra/config/: dev.ts  environment.ts  prod.ts  stg.ts
infra/test/: test-config.ts
slides/: README.md  package-lock.json  package.json  slides.md
(+997 files in other folders)
